tests/mm0_mmu/fail/bad-sort431.mm0
-- bad modifier order
free provable pure sort s431;